@@ -32,10 +32,13 @@ public class FetchResultSet extends TajoResultSetBase {
   private int fetchRowNum;
   private TajoMemoryResultSet currentResultSet;
   private boolean finished = false;
+// maxRows number is limit value of resultSet. The value must be >= 0, and 0 means there is not limit.
+  private int maxRows;
 
   public FetchResultSet(QueryClient tajoClient, Schema schema, QueryId queryId, int fetchRowNum) {
     super(tajoClient.getClientSideSessionVars());
     this.tajoClient = tajoClient;
+    this.maxRows = tajoClient.getMaxRows();
     this.queryId = queryId;
     this.fetchRowNum = fetchRowNum;
     this.totalRow = Integer.MAX_VALUE;
@@ -48,7 +51,7 @@ public class FetchResultSet extends TajoResultSetBase {
 
   @Override
   protected Tuple nextTuple() throws IOException {
-    if (finished) {
+    if (finished || (maxRows > 0 && curRow >= maxRows)) {
       return null;
     }
 
